--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
           Pages
       </div>
       <div class="right">
-          <a href="javascript:;" class="headerButton toggle-searchbox">
+          <a href="" class="headerButton toggle-searchbox">
               <ion-icon name="md-search"></ion-icon>
           </a>
       </div>
@@ -32,7 +32,7 @@
               <i class="input-icon">
                   <ion-icon name="md-search"></ion-icon>
               </i>
-              <a href="javascript:;" class="ml-1 close toggle-searchbox">
+              <a href="" class="ml-1 close toggle-searchbox">
                   <ion-icon name="md-close-circle"></ion-icon>
               </a>
           </div>
@@ -49,7 +49,7 @@
 
       <ul class="listview image-listview flush transparent mt-3 mb-2">
           <li>
-              <a href="page-chat.html" class="item">
+              <a href="" class="item">
                   <div class="icon-box bg-primary">
                       <ion-icon name="md-chatbubbles"></ion-icon>
                   </div>
@@ -59,7 +59,7 @@
               </a>
           </li>
           <li>
-              <a href="page-fullpage-slider.html" class="item">
+              <a href="" class="item">
                   <div class="icon-box bg-primary">
                       <ion-icon name="md-image"></ion-icon>
                   </div>
@@ -69,7 +69,7 @@
               </a>
           </li>
           <li>
-              <a href="page-login.html" class="item">
+              <a href="" class="item">
                   <div class="icon-box bg-primary">
                       <ion-icon name="md-lock"></ion-icon>
                   </div>
@@ -79,7 +79,7 @@
               </a>
           </li>
           <li>
-              <a href="page-register.html" class="item">
+              <a href="" class="item">
                   <div class="icon-box bg-primary">
                       <ion-icon name="md-person"></ion-icon>
                   </div>
@@ -89,7 +89,7 @@
               </a>
           </li>
           <li>
-              <a href="page-forgot-password.html" class="item">
+              <a href="" class="item">
                   <div class="icon-box bg-primary">
                       <ion-icon name="md-refresh"></ion-icon>
                   </div>
@@ -99,7 +99,7 @@
               </a>
           </li>
           <li>
-              <a href="page-sms-verification.html" class="item">
+              <a href="" class="item">
                   <div class="icon-box bg-primary">
                       <ion-icon name="md-call"></ion-icon>
                   </div>
@@ -109,7 +109,7 @@
               </a>
           </li>
           <li>
-              <a href="page-profile.html" class="item">
+              <a href="" class="item">
                   <div class="icon-box bg-primary">
                       <ion-icon name="md-person"></ion-icon>
                   </div>
@@ -119,7 +119,7 @@
               </a>
           </li>
           <li>
-              <a href="page-product-page.html" class="item">
+              <a href="" class="item">
                   <div class="icon-box bg-primary">
                       <ion-icon name="md-gift"></ion-icon>
                   </div>
@@ -129,7 +129,7 @@
               </a>
           </li>
           <li>
-              <a href="page-cart.html" class="item">
+              <a href="" class="item">
                   <div class="icon-box bg-primary">
                       <ion-icon name="md-cart"></ion-icon>
                   </div>
@@ -139,7 +139,7 @@
               </a>
           </li>
           <li>
-              <a href="page-blank.html" class="item">
+              <a href="" class="item">
                   <div class="icon-box bg-primary">
                       <ion-icon name="md-document"></ion-icon>
                   </div>
@@ -149,7 +149,7 @@
               </a>
           </li>
           <li>
-              <a href="page-faq.html" class="item">
+              <a href="" class="item">
                   <div class="icon-box bg-primary">
                       <ion-icon name="md-help-buoy"></ion-icon>
                   </div>
@@ -159,7 +159,7 @@
               </a>
           </li>
           <li>
-              <a href="page-blogpost.html" class="item">
+              <a href="" class="item">
                   <div class="icon-box bg-primary">
                       <ion-icon name="md-document"></ion-icon>
                   </div>
@@ -169,7 +169,7 @@
               </a>
           </li>
           <li>
-              <a href="page-about.html" class="item">
+              <a href="" class="item">
                   <div class="icon-box bg-primary">
                       <ion-icon name="md-document"></ion-icon>
                   </div>
@@ -179,7 +179,7 @@
               </a>
           </li>
           <li>
-              <a href="page-contact.html" class="item">
+              <a href="" class="item">
                   <div class="icon-box bg-primary">
                       <ion-icon name="md-call"></ion-icon>
                   </div>
@@ -189,7 +189,7 @@
               </a>
           </li>
           <li>
-              <a href="page-maintenance.html" class="item">
+              <a href="" class="item">
                   <div class="icon-box bg-primary">
                       <ion-icon name="md-hammer"></ion-icon>
                   </div>
@@ -199,7 +199,7 @@
               </a>
           </li>
           <li>
-              <a href="page-under-construction.html" class="item">
+              <a href="" class="item">
                   <div class="icon-box bg-primary">
                       <ion-icon name="md-megaphone"></ion-icon>
                   </div>
@@ -221,19 +221,19 @@
           Great way to start your mobile websites and pwa projects.
 
           <div class="mt-2">
-              <a href="javascript:;" class="btn btn-icon btn-sm btn-facebook">
+              <a href="" class="btn btn-icon btn-sm btn-facebook">
                   <ion-icon name="logo-facebook"></ion-icon>
               </a>
-              <a href="javascript:;" class="btn btn-icon btn-sm btn-twitter">
+              <a href="" class="btn btn-icon btn-sm btn-twitter">
                   <ion-icon name="logo-twitter"></ion-icon>
               </a>
-              <a href="javascript:;" class="btn btn-icon btn-sm btn-linkedin">
+              <a href="" class="btn btn-icon btn-sm btn-linkedin">
                   <ion-icon name="logo-linkedin"></ion-icon>
               </a>
-              <a href="javascript:;" class="btn btn-icon btn-sm btn-instagram">
+              <a href="" class="btn btn-icon btn-sm btn-instagram">
                   <ion-icon name="logo-instagram"></ion-icon>
               </a>
-              <a href="javascript:;" class="btn btn-icon btn-sm btn-whatsapp">
+              <a href="" class="btn btn-icon btn-sm btn-whatsapp">
                   <ion-icon name="logo-whatsapp"></ion-icon>
               </a>
               <a href="#" class="btn btn-icon btn-sm btn-secondary goTop">
@@ -250,28 +250,28 @@
 
   <!-- App Bottom Menu -->
   <div class="appBottomMenu">
-      <a href="index.html" class="item">
+      <a href="#" class="item">
           <div class="col">
               <ion-icon name="md-home"></ion-icon>
           </div>
       </a>
-      <a href="app-components.html" class="item">
+      <a href="#" class="item">
           <div class="col">
               <ion-icon name="md-cube"></ion-icon>
           </div>
       </a>
-      <a href="page-chat.html" class="item">
+      <a href="#" class="item">
           <div class="col">
               <ion-icon name="md-chatbubbles"></ion-icon>
               <span class="badge badge-danger">5</span>
           </div>
       </a>
-      <a href="app-pages.html" class="item active">
+      <a href="#" class="item active">
           <div class="col">
               <ion-icon name="md-laptop"></ion-icon>
           </div>
       </a>
-      <a href="javascript:;" class="item" data-toggle="modal" data-target="#sidebarPanel">
+      <a href="" class="item" data-toggle="modal" data-target="#sidebarPanel">
           <div class="col">
               <ion-icon name="md-menu"></ion-icon>
           </div>
@@ -297,7 +297,7 @@
                               California
                           </div>
                       </div>
-                      <a href="javascript:;" class="close-sidebar-button" data-dismiss="modal">
+                      <a href="" class="close-sidebar-button" data-dismiss="modal">
                           <ion-icon name="md-close-circle"></ion-icon>
                       </a>
                   </div>
@@ -305,7 +305,7 @@
 
                   <ul class="listview flush transparent no-line image-listview mt-2">
                       <li>
-                          <a href="index.html" class="item">
+                          <a href="" class="item">
                               <div class="icon-box bg-primary">
                                   <ion-icon name="md-home"></ion-icon>
                               </div>
@@ -315,7 +315,7 @@
                           </a>
                       </li>
                       <li>
-                          <a href="app-components.html" class="item">
+                          <a href="" class="item">
                               <div class="icon-box bg-primary">
                                   <ion-icon name="md-cube"></ion-icon>
                               </div>
@@ -325,7 +325,7 @@
                           </a>
                       </li>
                       <li>
-                          <a href="app-pages.html" class="item">
+                          <a href="" class="item">
                               <div class="icon-box bg-primary">
                                   <ion-icon name="md-laptop"></ion-icon>
                               </div>
@@ -335,7 +335,7 @@
                           </a>
                       </li>
                       <li>
-                          <a href="page-chat.html" class="item">
+                          <a href="" class="item">
                               <div class="icon-box bg-primary">
                                   <ion-icon name="md-chatbubbles"></ion-icon>
                               </div>
@@ -367,7 +367,7 @@
                   </div>
                   <ul class="listview image-listview flush transparent no-line">
                       <li>
-                          <a href="page-chat.html" class="item">
+                          <a href="" class="item">
                               <img src="assets/img/sample/avatar/avatar7.jpg" alt="image" class="image">
                               <div class="in">
                                   <div>Sophie Asveld</div>
@@ -375,7 +375,7 @@
                           </a>
                       </li>
                       <li>
-                          <a href="page-chat.html" class="item">
+                          <a href="" class="item">
                               <img src="assets/img/sample/avatar/avatar3.jpg" alt="image" class="image">
                               <div class="in">
                                   <div>Sebastian Bennett</div>
@@ -384,7 +384,7 @@
                           </a>
                       </li>
                       <li>
-                          <a href="page-chat.html" class="item">
+                          <a href="" class="item">
                               <img src="assets/img/sample/avatar/avatar10.jpg" alt="image" class="image">
                               <div class="in">
                                   <div>Beth Murphy</div>
@@ -392,7 +392,7 @@
                           </a>
                       </li>
                       <li>
-                          <a href="page-chat.html" class="item">
+                          <a href="" class="item">
                               <img src="assets/img/sample/avatar/avatar2.jpg" alt="image" class="image">
                               <div class="in">
                                   <div>Amelia Cabal</div>
@@ -400,7 +400,7 @@
                           </a>
                       </li>
                       <li>
-                          <a href="page-chat.html" class="item">
+                          <a href="" class="item">
                               <img src="assets/img/sample/avatar/avatar5.jpg" alt="image" class="image">
                               <div class="in">
                                   <div>Henry Doe</div>
@@ -413,16 +413,16 @@
 
               <!-- sidebar buttons -->
               <div class="sidebar-buttons">
-                  <a href="javascript:;" class="button">
+                  <a href="" class="button">
                       <ion-icon name="md-person"></ion-icon>
                   </a>
-                  <a href="javascript:;" class="button">
+                  <a href="" class="button">
                       <ion-icon name="md-archive"></ion-icon>
                   </a>
-                  <a href="javascript:;" class="button">
+                  <a href="" class="button">
                       <ion-icon name="md-settings"></ion-icon>
                   </a>
-                  <a href="javascript:;" class="button">
+                  <a href="" class="button">
                       <ion-icon name="md-log-out"></ion-icon>
                   </a>
               </div>
@@ -432,20 +432,5 @@
   </div>
   <!-- * App Sidebar -->
 
-
-  <!-- ///////////// Js Files ////////////////////  -->
-  <!-- Jquery -->
-  <script src="assets/js/lib/jquery-3.4.1.min.js"></script>
-  <!-- Bootstrap-->
-  <script src="assets/js/lib/popper.min.js"></script>
-  <script src="assets/js/lib/bootstrap.min.js"></script>
-  <!-- Ionicons -->
-  <script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.js"></script>
-  <!-- Owl Carousel -->
-  <script src="assets/js/plugins/owl-carousel/owl.carousel.min.js"></script>
-  <!-- jQuery Circle Progress -->
-  <script src="assets/js/plugins/jquery-circle-progress/circle-progress.min.js"></script>
-  <!-- Base Js File -->
-  <script src="assets/js/base.js"></script>
 
 </body>
