--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,7 +48,7 @@
 
         <ul class="listview image-listview flush transparent mt-3 mb-2">
             <li>
-                <a href="page-chat.html" class="item">
+                <a href="#" class="item">
                     <div class="icon-box bg-primary">
                         <ion-icon name="md-chatbubbles"></ion-icon>
                     </div>
@@ -58,7 +58,7 @@
                 </a>
             </li>
             <li>
-                <a href="page-fullpage-slider.html" class="item">
+                <a href="#" class="item">
                     <div class="icon-box bg-primary">
                         <ion-icon name="md-image"></ion-icon>
                     </div>
@@ -68,7 +68,7 @@
                 </a>
             </li>
             <li>
-                <a href="page-login.html" class="item">
+                <a href="#" class="item">
                     <div class="icon-box bg-primary">
                         <ion-icon name="md-lock"></ion-icon>
                     </div>
@@ -78,7 +78,7 @@
                 </a>
             </li>
             <li>
-                <a href="page-register.html" class="item">
+                <a href="#" class="item">
                     <div class="icon-box bg-primary">
                         <ion-icon name="md-person"></ion-icon>
                     </div>
@@ -88,7 +88,7 @@
                 </a>
             </li>
             <li>
-                <a href="page-forgot-password.html" class="item">
+                <a href="#" class="item">
                     <div class="icon-box bg-primary">
                         <ion-icon name="md-refresh"></ion-icon>
                     </div>
@@ -98,7 +98,7 @@
                 </a>
             </li>
             <li>
-                <a href="page-sms-verification.html" class="item">
+                <a href="#" class="item">
                     <div class="icon-box bg-primary">
                         <ion-icon name="md-call"></ion-icon>
                     </div>
@@ -108,7 +108,7 @@
                 </a>
             </li>
             <li>
-                <a href="page-profile.html" class="item">
+                <a href="#" class="item">
                     <div class="icon-box bg-primary">
                         <ion-icon name="md-person"></ion-icon>
                     </div>
@@ -118,7 +118,7 @@
                 </a>
             </li>
             <li>
-                <a href="page-product-page.html" class="item">
+                <a href="#" class="item">
                     <div class="icon-box bg-primary">
                         <ion-icon name="md-gift"></ion-icon>
                     </div>
@@ -128,7 +128,7 @@
                 </a>
             </li>
             <li>
-                <a href="page-cart.html" class="item">
+                <a href="#" class="item">
                     <div class="icon-box bg-primary">
                         <ion-icon name="md-cart"></ion-icon>
                     </div>
@@ -138,7 +138,7 @@
                 </a>
             </li>
             <li>
-                <a href="page-blank.html" class="item">
+                <a href="#" class="item">
                     <div class="icon-box bg-primary">
                         <ion-icon name="md-document"></ion-icon>
                     </div>
@@ -148,7 +148,7 @@
                 </a>
             </li>
             <li>
-                <a href="page-faq.html" class="item">
+                <a href="#" class="item">
                     <div class="icon-box bg-primary">
                         <ion-icon name="md-help-buoy"></ion-icon>
                     </div>
@@ -158,7 +158,7 @@
                 </a>
             </li>
             <li>
-                <a href="page-blogpost.html" class="item">
+                <a href="#" class="item">
                     <div class="icon-box bg-primary">
                         <ion-icon name="md-document"></ion-icon>
                     </div>
@@ -168,7 +168,7 @@
                 </a>
             </li>
             <li>
-                <a href="page-about.html" class="item">
+                <a href="#" class="item">
                     <div class="icon-box bg-primary">
                         <ion-icon name="md-document"></ion-icon>
                     </div>
@@ -178,7 +178,7 @@
                 </a>
             </li>
             <li>
-                <a href="page-contact.html" class="item">
+                <a href="#" class="item">
                     <div class="icon-box bg-primary">
                         <ion-icon name="md-call"></ion-icon>
                     </div>
@@ -188,7 +188,7 @@
                 </a>
             </li>
             <li>
-                <a href="page-maintenance.html" class="item">
+                <a href="#" class="item">
                     <div class="icon-box bg-primary">
                         <ion-icon name="md-hammer"></ion-icon>
                     </div>
@@ -198,7 +198,7 @@
                 </a>
             </li>
             <li>
-                <a href="page-under-construction.html" class="item">
+                <a href="#" class="item">
                     <div class="icon-box bg-primary">
                         <ion-icon name="md-megaphone"></ion-icon>
                     </div>
@@ -220,22 +220,22 @@
             Great way to start your mobile websites and pwa projects.
 
             <div class="mt-2">
-                <a href="javascript:;" class="btn btn-icon btn-sm btn-facebook">
+                <a  class="btn btn-icon btn-sm btn-facebook">
                     <ion-icon name="logo-facebook"></ion-icon>
                 </a>
-                <a href="javascript:;" class="btn btn-icon btn-sm btn-twitter">
+                <a  class="btn btn-icon btn-sm btn-twitter">
                     <ion-icon name="logo-twitter"></ion-icon>
                 </a>
-                <a href="javascript:;" class="btn btn-icon btn-sm btn-linkedin">
+                <a  class="btn btn-icon btn-sm btn-linkedin">
                     <ion-icon name="logo-linkedin"></ion-icon>
                 </a>
-                <a href="javascript:;" class="btn btn-icon btn-sm btn-instagram">
+                <a  class="btn btn-icon btn-sm btn-instagram">
                     <ion-icon name="logo-instagram"></ion-icon>
                 </a>
-                <a href="javascript:;" class="btn btn-icon btn-sm btn-whatsapp">
+                <a  class="btn btn-icon btn-sm btn-whatsapp">
                     <ion-icon name="logo-whatsapp"></ion-icon>
                 </a>
-                <a href="#" class="btn btn-icon btn-sm btn-secondary goTop">
+                <a  class="btn btn-icon btn-sm btn-secondary goTop">
                     <ion-icon name="md-arrow-up"></ion-icon>
                 </a>
             </div>
@@ -249,28 +249,28 @@
 
     <!-- App Bottom Menu -->
     <div class="appBottomMenu">
-        <a href="index.html" class="item">
+        <a href="#" class="item">
             <div class="col">
                 <ion-icon name="md-home"></ion-icon>
             </div>
         </a>
-        <a href="app-components.html" class="item">
+        <a href="#" class="item">
             <div class="col">
                 <ion-icon name="md-cube"></ion-icon>
             </div>
         </a>
-        <a href="page-chat.html" class="item">
+        <a href="#" class="item">
             <div class="col">
                 <ion-icon name="md-chatbubbles"></ion-icon>
                 <span class="badge badge-danger">5</span>
             </div>
         </a>
-        <a href="app-pages.html" class="item active">
+        <a href="#" class="item active">
             <div class="col">
                 <ion-icon name="md-cube"></ion-icon>
             </div>
         </a>
-        <a href="javascript:;" class="item" data-toggle="modal" data-target="#sidebarPanel">
+        <a href="#" class="item" data-toggle="modal" data-target="#sidebarPanel">
             <div class="col">
                 <ion-icon name="md-menu"></ion-icon>
             </div>
@@ -314,7 +314,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="app-components.html" class="item">
+                            <a href="#" class="item">
                                 <div class="icon-box bg-primary">
                                     <ion-icon name="md-cube"></ion-icon>
                                 </div>
@@ -324,7 +324,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="app-pages.html" class="item">
+                            <a href="#" class="item">
                                 <div class="icon-box bg-primary">
                                     <ion-icon name="md-cube"></ion-icon>
                                 </div>
@@ -334,7 +334,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="page-chat.html" class="item">
+                            <a href="#" class="item">
                                 <div class="icon-box bg-primary">
                                     <ion-icon name="md-chatbubbles"></ion-icon>
                                 </div>
@@ -366,7 +366,7 @@
                     </div>
                     <ul class="listview image-listview flush transparent no-line">
                         <li>
-                            <a href="page-chat.html" class="item">
+                            <a href="#" class="item">
                                 <img src="assets/img/sample/avatar/avatar7.jpg" alt="image" class="image">
                                 <div class="in">
                                     <div>Sophie Asveld</div>
@@ -374,7 +374,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="page-chat.html" class="item">
+                            <a href="#" class="item">
                                 <img src="assets/img/sample/avatar/avatar3.jpg" alt="image" class="image">
                                 <div class="in">
                                     <div>Sebastian Bennett</div>
@@ -383,7 +383,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="page-chat.html" class="item">
+                            <a href="#" class="item">
                                 <img src="assets/img/sample/avatar/avatar10.jpg" alt="image" class="image">
                                 <div class="in">
                                     <div>Beth Murphy</div>
@@ -391,7 +391,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="page-chat.html" class="item">
+                            <a href="#" class="item">
                                 <img src="assets/img/sample/avatar/avatar2.jpg" alt="image" class="image">
                                 <div class="in">
                                     <div>Amelia Cabal</div>
@@ -399,7 +399,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="page-chat.html" class="item">
+                            <a href="#" class="item">
                                 <img src="assets/img/sample/avatar/avatar5.jpg" alt="image" class="image">
                                 <div class="in">
                                     <div>Henry Doe</div>
@@ -412,16 +412,16 @@
 
                 <!-- sidebar buttons -->
                 <div class="sidebar-buttons">
-                    <a href="javascript:;" class="button">
+                    <a href="#" class="button">
                         <ion-icon name="md-person"></ion-icon>
                     </a>
-                    <a href="javascript:;" class="button">
+                    <a href="#" class="button">
                         <ion-icon name="md-archive"></ion-icon>
                     </a>
-                    <a href="javascript:;" class="button">
+                    <a href="#" class="button">
                         <ion-icon name="md-settings"></ion-icon>
                     </a>
-                    <a href="javascript:;" class="button">
+                    <a href="#" class="button">
                         <ion-icon name="md-log-out"></ion-icon>
                     </a>
                 </div>
